--- a/rosbot_xl_controller/config/diff_drive_controller.yaml
+++ b/rosbot_xl_controller/config/diff_drive_controller.yaml
@@ -1,3 +1,4 @@
+---
 /**/controller_manager:
   ros__parameters:
     use_sim_time: false
@@ -23,8 +24,8 @@
 /**/rosbot_xl_base_controller:
   ros__parameters:
     tf_frame_prefix_enable: false
-    left_wheel_names: ["fl_wheel_joint", "rl_wheel_joint"]
-    right_wheel_names: ["fr_wheel_joint", "rr_wheel_joint"]
+    left_wheel_names: [fl_wheel_joint, rl_wheel_joint]
+    right_wheel_names: [fr_wheel_joint, rr_wheel_joint]
 
     wheel_separation: 0.248
     wheel_radius: 0.048
