--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
     rev: 0.2.3
     hooks:
       - id: yamlfmt
-        files: ^(?!.*compose).*$
+        files: ^(?!.*compose)(?!.*ekf\.yaml$).*$
         args: [--mapping, '2', --sequence, '4', --offset, '2', --width, '100']
 
   - repo: https://github.com/psf/black
