--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -50,7 +50,7 @@ jobs:
           git_user: action-bot
           git_email: action-bot@action-bot.com
 
-  build-and-push-docker-image:
+  Trigger rosbot-docker to build image
     name: Create new docker image
     runs-on: ubuntu-latest
     needs: catkin-release
