--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -51,7 +51,7 @@ jobs:
           git_email: action-bot@action-bot.com
 
   build-docker-image:
-    name: Trigger rosbot-docker to build image
+    name: Trigger rosbot-xl-docker to build image
     runs-on: ubuntu-latest
     needs: catkin-release
     steps:
