--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -49,6 +49,9 @@ jobs:
           cp -r src/ros2_controllers/diff_drive_controller src/
           cp -r src/ros2_controllers/imu_sensor_broadcaster src/
           rm -rf src/ros2_controllers
+          # Package micro_ros_msgs does not have industrial ci and tests does not pass.
+          # For more information see https://github.com/micro-ROS/micro_ros_msgs/issues/7
+          sed '/if(BUILD_TESTING)/,/endif()/d' src/micro_ros_msgs/CMakeLists.txt -i
 
       - uses: ros-industrial/industrial_ci@master
         env:
