--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ rosbot_hardware_interfaces/
 ros_components_description/
 rosbot_controllers/
 husarion/husarion_office_gz
+micro-ROS-Agent/
+micro_ros_msgs/
+industrial_ci/
 ros2_controllers/
 diff_drive_controller/
 imu_sensor_broadcaster/
