--- a/rosbot_xl_bringup/package.xml
+++ b/rosbot_xl_bringup/package.xml
@@ -27,10 +27,10 @@
 
   <exec_depend>laser_filters</exec_depend>
   <exec_depend>robot_localization</exec_depend>
-  <exec_depend>micro_ros_agent</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD == hardware">micro_ros_agent</exec_depend>
 
   <!-- Microros agent build dependency-->
-  <build_depend>git</build_depend>
+  <build_depend condition="$HUSARION_ROS_BUILD == hardware">git</build_depend>
 
   <test_depend>rclpy</test_depend>
   <test_depend>python3-pytest</test_depend>
