--- a/rosbot_xl/package.xml
+++ b/rosbot_xl/package.xml
@@ -24,8 +24,8 @@
   <depend>rosbot_xl_bringup</depend>
   <depend>rosbot_xl_controller</depend>
   <depend>rosbot_xl_description</depend>
-  <depend condition="$HUSARION_ROS_BUILD == simulation">rosbot_xl_gazebo</depend>
-  <depend condition="$HUSARION_ROS_BUILD == hardware">rosbot_xl_utils</depend>
+  <depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">rosbot_xl_gazebo</depend>
+  <depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">rosbot_xl_utils</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
