--- a/rosbot_xl_gazebo/package.xml
+++ b/rosbot_xl_gazebo/package.xml
@@ -19,29 +19,29 @@
   <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
   <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
 
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">ros2launch</exec_depend>
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">launch</exec_depend>
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">launch_ros</exec_depend>
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">ament_index_python</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">ros2launch</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">launch</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">launch_ros</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">ament_index_python</exec_depend>
 
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">rosbot_xl_bringup</exec_depend>
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">husarion_office_gz</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">rosbot_xl_bringup</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">husarion_office_gz</exec_depend>
 
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">ros_gz_sim</exec_depend>
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">ros_gz_bridge</exec_depend>
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">ign_ros2_control</exec_depend>
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">nav2_common</exec_depend>
-  <exec_depend condition="$HUSARION_ROS_BUILD == simulation">tf2_ros</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">ros_gz_sim</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">ros_gz_bridge</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">ign_ros2_control</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">nav2_common</exec_depend>
+  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">tf2_ros</exec_depend>
 
-  <test_depend condition="$HUSARION_ROS_BUILD == simulation">rclpy</test_depend>
-  <test_depend condition="$HUSARION_ROS_BUILD == simulation">python3-pytest</test_depend>
-  <test_depend condition="$HUSARION_ROS_BUILD == simulation">launch_pytest</test_depend>
-  <test_depend condition="$HUSARION_ROS_BUILD == simulation">launch_testing</test_depend>
+  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">rclpy</test_depend>
+  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">python3-pytest</test_depend>
+  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">launch_pytest</test_depend>
+  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">launch_testing</test_depend>
 
-  <test_depend condition="$HUSARION_ROS_BUILD == simulation">python3-psutil</test_depend>
-  <test_depend condition="$HUSARION_ROS_BUILD == simulation">nav_msgs</test_depend>
-  <test_depend condition="$HUSARION_ROS_BUILD == simulation">geometry_msgs</test_depend>
-  <test_depend condition="$HUSARION_ROS_BUILD == simulation">sensor_msgs</test_depend>
+  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">python3-psutil</test_depend>
+  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">nav_msgs</test_depend>
+  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">geometry_msgs</test_depend>
+  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">sensor_msgs</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
