--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -48,14 +48,6 @@ jobs:
           cp -r src/ros2_controllers/imu_sensor_broadcaster src/
           rm -rf src/ros2_controllers
 
-      # - name: Setup ROS2 Workspace and Clone Repositories
-      #   run: |
-      #     python3 -m pip install -U rosdep
-      #     rosdep init
-      #     rosdep update --rosdistro $ROS_DISTRO
-      #     export HUSARION_ROS_BUILD_TYPE=simulation
-      #     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y
-
       - name: Leave only ROSbot tests
         shell: bash
         run: |
@@ -65,4 +57,5 @@ jobs:
       - uses: ros-industrial/industrial_ci@master
         env:
           ROS_DISTRO: ${{matrix.ROS_DISTRO}}
-          HUSARION_ROS_BUILD_TYPE: simulation
+          global:
+            - HUSARION_ROS_BUILD_TYPE=simulation
