--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -34,9 +34,6 @@ jobs:
         ROS_DISTRO: [humble]
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    env:
-      global:
-        - BEFORE_INIT='export HUSARION_ROS_BUILD_TYPE=simulation'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -60,3 +57,5 @@ jobs:
       - uses: ros-industrial/industrial_ci@master
         env:
           ROS_DISTRO: ${{matrix.ROS_DISTRO}}
+          global: |
+            - BEFORE_INIT='export HUSARION_ROS_BUILD_TYPE=simulation'
