--- a/rosbot_xl_utils/package.xml
+++ b/rosbot_xl_utils/package.xml
@@ -15,6 +15,8 @@
 
   <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
 
+  <exec_depend>launch_ros</exec_depend>
+
   <exec_depend>python3-sh</exec_depend>
   <exec_depend>python-periphery-pip</exec_depend>
   <exec_depend>python3-pyftdi-pip</exec_depend>
