--- a/rosbot_xl_gazebo/package.xml
+++ b/rosbot_xl_gazebo/package.xml
@@ -26,6 +26,7 @@
   <exec_depend>rosbot_xl_bringup</exec_depend>
   <exec_depend>husarion_gz_worlds</exec_depend>
 
+  <exec_depend>ros_gz_sim</exec_depend>
   <!-- Ignition dependency is specified in the ros_gz_sim package,
     version can chosen using GZ_VERSION (or IGNITION_VERSION) env variable,
     for details refer to the ros_gz_sim package -->
