--- a/rosbot_xl_gazebo/package.xml
+++ b/rosbot_xl_gazebo/package.xml
@@ -22,6 +22,7 @@
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
+  <exec_depend>ament_index_python</exec_depend>
 
   <exec_depend>rosbot_xl_bringup</exec_depend>
   <exec_depend>husarion_gz_worlds</exec_depend>
