--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -7,28 +7,19 @@ on:
 
 
 jobs:
-  black:
-    name: Black
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: psf/black@stable
-        with:
-          options: --line-length=99
 
-  spellcheck:
-    name: Spellcheck
+  pre-commit:
+    name: pre-commit
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: rojopolis/spellcheck-github-actions@0.33.1
-        name: Spellcheck
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+      - uses: pre-commit/action@v3.0.1
 
   ros_industrial_ci:
     name: ROS Industrial CI
     needs:
-      - black
-      - spellcheck
+      - pre-commit
     strategy:
       fail-fast: false
       matrix:
@@ -37,7 +28,7 @@ jobs:
     timeout-minutes: 30
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup ROS2 Workspace and Clone Repositories
         run: |
